--- a/front/src/components/common/Layout.module.sass
+++ b/front/src/components/common/Layout.module.sass
@@ -5,7 +5,11 @@
     justify-content: space-between
     flex-direction: column
     font-family: $font
-    padding: 30px
+    padding: 0px 30px
     width: 500px
-    height: 950vh
+    height: 100vh
+    outline: 5px solid black
+    outline-offset: -5px
+    
+    
     
