--- a/front/src/sass/index.sass
+++ b/front/src/sass/index.sass
@@ -6,7 +6,9 @@ body
     background-color: $bgcolor
     padding: 0px
     margin: 0px
-    
+    display: flex
+    justify-content: center
+    align-items: center
 
 #root
     height: 100%
