--- a/front/src/components/common/Header/Header.module.sass
+++ b/front/src/components/common/Header/Header.module.sass
@@ -3,6 +3,7 @@
     display: flex
     align-items: center
     justify-content: space-between
+    padding-top: 30px
     button
         border: none
         background-color: transparent
