--- a/front/src/sass/index.sass
+++ b/front/src/sass/index.sass
@@ -9,6 +9,8 @@ body
     display: flex
     justify-content: center
     align-items: center
+    color: black
+    line-height: 1.5
 
 #root
-    height: 100%
+    height: 100vh
