--- a/front/src/sass/index.sass
+++ b/front/src/sass/index.sass
@@ -14,3 +14,32 @@ body
 
 #root
     height: 100vh
+
+.select2-selection
+    &__menu
+        background-color: black !important
+        color: orange   !important
+        border-radius: 0px !important
+
+    &__control
+        margin: 0 auto
+        text-align: left
+        margin-bottom: 1rem
+        width: 84% !important
+        min-height: 48px !important
+        border-radius: 0px !important
+        background-color: black !important
+        color: orange !important
+        border: none !important
+    &__multi-value__label
+        color: black !important
+        background-color: white !important  
+
+    &__multi-value
+        border-radius: 0px !important
+.select2-selection__single-value
+    color: orange !important
+    font-size: 20px !important
+.select2-selection__placeholder
+    color: orange  !important
+    font-size: 20px !important
