--- a/front/src/components/pages/NewWorkout/NewWorkout.module.sass
+++ b/front/src/components/pages/NewWorkout/NewWorkout.module.sass
@@ -1,3 +1,9 @@
 .wrapper
     text-align: center
     margin-bottom: 220px
+.addExercise
+    text-decoration: none
+    color: black
+    margin-bottom: 10px
+    &:hover
+        color: red
