--- a/front/src/components/common/ui/Counters/Counters.module.sass
+++ b/front/src/components/common/ui/Counters/Counters.module.sass
@@ -5,6 +5,7 @@
     margin-bottom: 80px
     margin-top: 60px
     >.count
+        width: 30%
         font-size: 20px
         text-align: center
         .heading
